<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="40dp"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="-7dp"
        android:layout_marginBottom="595dp"
        android:background="@drawable/back_button"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/tv_login_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Title"/>

    <TextView
        android:id="@+id/tv_login_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_login_subtitle"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_login_title"
        style="@style/Subtitle" />

    <ImageView
        android:id="@+id/image_icon_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="435dp"
        android:src="@drawable/ic_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/til_email"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ic_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="360dp"
        android:src="@drawable/ic_lock"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/til_password"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/login_email"
        app:layout_constraintLeft_toLeftOf="@id/image_icon_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_subtitle"
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:hint="@string/login_password"
        app:layout_constraintLeft_toLeftOf="@id/image_icon_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextInputEditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forgot_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_forgot_pw"
        android:textSize="36px"
        android:textAlignment="textEnd"
        android:textColor="@color/dark_blue"
        android:fontFamily="@font/andikabold"
        app:layout_constraintTop_toBottomOf="@id/til_password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/masukButton"
        style="@style/ButtonBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_havent_account"
        tools:layout_editor_absoluteX="40dp" />

    <TextView
        android:id="@+id/tv_havent_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_havent_account"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>