<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/sky_blue"
    android:padding="50dp">

    <TextView
        android:id="@+id/started_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:fontFamily="@font/leaguespartanextrabold"
        android:gravity="center"
        android:text="@string/started_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Title"/>

    <TextView
        android:id="@+id/started_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/started_subtitle"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/andikaregular"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/started_title"
        style="@style/Subtitle"/>

    <ImageView
        android:id="@+id/image_ilustration_cloud"
        android:layout_width="wrap_content"
        android:layout_height="400px"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="75dp"
        android:src="@drawable/cloud_right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/image_illustration_started"
        android:layout_width="match_parent"
        android:layout_height="700px"
        android:src="@drawable/image_illustration_started"
        app:layout_constraintBottom_toTopOf="@id/started_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toTopOf="parent"
        style="@style/ButtonBlue"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/btn_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ButtonWhite"/>


</androidx.constraintlayout.widget.ConstraintLayout>